style(fix): overflow-x

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -7,6 +7,9 @@
 a {
   text-decoration: none;
 }
+html {
+  overflow-x: hidden;
+}
 
 /* hr {
   border: 0;
